# libanimation

./: .travis.yml  meson.build
animation/: geometry.h  meson.build  property.h
animation-clutter/: animation-clutter-actor-box-query.c  animation-clutter-actor-box-query.h  animation-clutter-affine-effect.c  animation-clutter-affine-effect.h  animation-clutter-common-private.h  animation-clutter-common.c  animation-clutter-common.h  animation-clutter-grid-effect.c  animation-clutter-grid-effect.h  animation-clutter-wobbly-effect.c  animation-clutter-wobbly-effect.h  meson.build
animation-glib/: box.cpp  box.h  constructor-helpers.cpp  constructor-helpers.h  meson.build  vector.cpp  vector4d.cpp
animation-glib/bounce/: bounce.cpp  bounce.h  meson.build
animation-glib/glide/: glide.cpp  glide.h  meson.build
animation-glib/grid/: grid.cpp  grid.h  meson.build
animation-glib/magiclamp/: magiclamp.cpp  magiclamp.h  meson.build
animation-glib/query/: geometry-query-internal.cpp  geometry-query-private.h  geometry-query.cpp  geometry-query.h  meson.build
animation-glib/stepper/: linear.cpp  meson.build  reverse.cpp  stepper-holder-internal.h  stepper-holder.cpp  stepper-holder.h  stepper-internal.cpp  stepper-internal.h  stepper-wrapper.cpp  stepper.cpp
animation-glib/transform/: meson.build  transform.cpp  transform.h
animation-glib/wobbly/: anchor.cpp  anchor.h  model.cpp  model.h
animation-glib/zoom/: meson.build  zoom.cpp  zoom.h
animation/bounce/: bounce.cpp  bounce.h  meson.build
animation/glide/: glide.cpp  glide.h  meson.build
animation/grid/: meson.build
animation/magiclamp/: magiclamp.cpp  magiclamp.h  meson.build
animation/query/: geometry_query.cpp  geometry_query.h  meson.build
animation/stepper/: linear.cpp  linear.h  meson.build  reverse.cpp  reverse.h  stepper.cpp  stepper.h
animation/transform/: meson.build
animation/wobbly/: wobbly_internal.h
animation/zoom/: meson.build  zoom.cpp  zoom.h
compositor-plugins/: meson.build
compositor-plugins/gnome-shell/: extension.js  meson.build  metadata.json  org.gnome.shell.extensions.animation.gschema.xml
debian/: changelog  control  gir1.2-animation-clutter-0.install  gnome-shell-extension-animation.install  libanimation-clutter-dev.install  libanimation-clutter0.install  libanimation-dev.install  libanimation-glib-dev.install
tests/: meson.build
tests/bounce/: bounce_animation_test.cpp
tests/glide/: glide_animation_test.cpp
tests/js/: common.js  meson.build  testBounceAnimation.js  testGlideAnimation.js  testMagicLampAnimation.js  testStepper.js  testZoomAnimation.js
tests/magiclamp/: magiclamp_animation_test.cpp
tests/wobbly/: glib_api_test.cpp  mesh_interpolation_test.cpp
tests/zoom/: zoom_animation_test.cpp
